2001-12-16  Craig Rodrigues  <rodrigc@gcc.gnu.org>
        PR other/3725
        * configure.in: Add AC_SUBST(target_alias).
        * configure: Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48064 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2377,6 +2377,7 @@ AC_SUBST(tm_p_file_list)
 AC_SUBST(tm_p_file)
 AC_SUBST(xm_file)
 AC_SUBST(xm_defines)
+AC_SUBST(target_alias)
 AC_SUBST(c_target_objs)
 AC_SUBST(cxx_target_objs)
 AC_SUBST(target_cpu_default)
