* ChangeLog, Make-lang.in, class.c, expr.c, gcj.texi, java-tree.h, 	jcf-parse.c, jcf-write.c, lex.c, parse.h, parse.y, verify.c: Fix 	spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48075 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -53,7 +53,7 @@ GCJ = gcj
 java: jc1$(exeext) $(GCJ)$(exeext) jvgenmain$(exeext) \
       gcjh$(exeext) jv-scan$(exeext) jcf-dump$(exeext)
 
-# Define the name of target independant tools to be installed in $(bindir)
+# Define the name of target independent tools to be installed in $(bindir)
 # Names are subject to changes
 JAVA_TARGET_INDEPENDENT_BIN_TOOLS = gcjh jv-scan jcf-dump
 
