* Makefile.in: Rebuilt. 	* Makefile.am (ordinary_java_source_files): Removed old file; 	added new file. 	* gnu/java/math/MPN.java: New file. 	* gnu/gcj/math/MPN.java: Removed. 	* java/math/BigInteger.java: Merged with Classpath.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48080 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -1243,7 +1243,6 @@ gnu/gcj/RawData.java \
 gnu/gcj/io/DefaultMimeTypes.java \
 gnu/gcj/io/MimeTypes.java \
 gnu/gcj/io/SimpleSHSStream.java	\
-gnu/gcj/math/MPN.java \
 gnu/gcj/protocol/core/Connection.java \
 gnu/gcj/protocol/core/Handler.java \
 gnu/gcj/protocol/core/CoreInputStream.java \
@@ -1275,6 +1274,7 @@ gnu/java/locale/LocaleInformation_de.java \
 gnu/java/locale/LocaleInformation_en.java \
 gnu/java/locale/LocaleInformation_en_US.java \
 gnu/java/locale/LocaleInformation_nl.java \
+gnu/java/math/MPN.java \
 gnu/java/security/provider/DefaultPolicy.java \
 gnu/java/security/provider/Gnu.java \
 gnu/java/security/provider/SHA.java \
