For PR libgcj/5103: 	* include/jvm.h (__GCJ_JNI_IMPL__): Define. 	* include/config.h.in: Rebuilt. 	* configure: Rebuilt. 	* configure.in: Define JV_HAVE_INTTYPES_H if inttypes.h found. 	Added comment for HAVE_DLOPEN to avoid autoheader error. 	* gcj/libgcj-config.h.in (JV_HAVE_INTTYPES_H): Added. 	* include/jni.h: Include <gcj/libgcj-config.h>.  Don't include 	CNI-specific headers if we are compiling ordinary JNI code with a 	C++ compiler.  Include <inttypes.h> and JNIWeakRef.h when 	appropriate. 	* jni.cc: Don't include JNIWeakRef.h.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48082 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/gcj/libgcj-config.h.in
+++ b/libjava/gcj/libgcj-config.h.in
@@ -3,3 +3,6 @@
 
 /* Define if hash synchronization is in use.  */
 #undef JV_HASH_SYNCHRONIZATION
+
+/* Define if <inttypes.h> is available.  */
+#undef JV_HAVE_INTTYPES_H
