--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Mon Dec 17 17:34:39 CET 2001  Jan Hubicka  <jh@sue.cz>
+
+	* toplev.c (rest_of_compilation): Revert:
+	Perform gcse after tracing.
+
 Fri Dec 14 23:43:29 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* Merge from mainline (cfg-merge-20011214 tag).
