* Makefile.in: Update dependencies. 	* c-lang.c: Remove unnecessary includes. 	(deferred_fns, start_cdtor, finish_cdtor, defer_fn): Move to 	c-objc-common.c. 	(finish_file): Move body to c_common_finish_file. 	* c-objc-common.c: Include varray.h and ggc.h. 	(deferred_fns, start_cdtor, finish_cdtor, defer_fn, 	expand_deferred_fns, c_objc_common_finish_file): Moved from c-lang.c. 	(c_objc_common_init): Initialize deferred function array. 	* c-tree.h (c_objc_common_finish_file, 	static_ctors, static_dtors): New. objc: 	* Make-lang.in: Update dependencies. 	* objc/objc-act.c: Don't include varray.h. 	(defer_fn, deferred_fns): Move to c-objc-common.c. 	(objc_init): Similarly for initialization of it. 	(finish_file): Move some to c-objc-common.c, use 	c_objc_common_finish_file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48134 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1157,15 +1157,15 @@ c-decl.o : c-decl.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) $(C_TREE_H) \
 c-typeck.o : c-typeck.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
     $(TARGET_H) flags.h intl.h output.h $(EXPR_H) $(RTL_H) toplev.h $(TM_P_H)
 c-lang.o : c-lang.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
-    $(GGC_H) toplev.h function.h $(VARRAY_H) \
-    $(RTL_H) $(EXPR_H) langhooks.h langhooks-def.h
+    langhooks.h langhooks-def.h
 c-lex.o : c-lex.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) c-lex.h \
     debug.h $(C_TREE_H) \
     c-pragma.h input.h intl.h flags.h toplev.h output.h \
     mbchar.h $(CPPLIB_H) $(EXPR_H) $(TM_P_H)
 c-objc-common.o : c-objc-common.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) \
     $(C_TREE_H) $(RTL_H) insn-config.h integrate.h $(EXPR_H) $(C_TREE_H) \
-    flags.h toplev.h tree-inline.h diagnostic.h integrate.h
+    flags.h toplev.h tree-inline.h diagnostic.h integrate.h $(VARRAY_H) \
+    $(GGC_H)
 c-aux-info.o : c-aux-info.c  $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_TREE_H) \
     flags.h toplev.h
 c-convert.o : c-convert.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h toplev.h
