* sem_res.adb (Resolve_Selected_Component): do not generate a 	discriminant check if the selected component is a component of 	the argument of an initialization procedure.
	* trans.c (tree_transform, case of arithmetic operators): If result
	type is private, the gnu_type is the base type of the full view,
	given that the full view itself may be a subtype.

	* sem_res.adb: Minor reformatting

	* trans.c (tree_transform, case N_Real_Literal): Add missing third
	parameter in call to Machine (unknown horrible effects from this
	omission).

	* urealp.h: Add definition of Round_Even for call to Machine
	Add third parameter for Machine

	* sem_warn.adb (Check_One_Unit): Suppress warnings completely on
	predefined units in No_Run_Time mode.

	* misc.c (insn-codes.h): Now include.

	* a-except.adb: Preparation work for future integration of the GCC 3
	exception handling mechanism
	(Notify_Handled_Exception, Notify_Unhandled_Exception): New routines
	to factorize previous code sequences and make them externally callable,
	e.g. for the Ada personality routine when the GCC 3 mechanism is used.
	(Propagate_Exception, Raise_Current_Excep, Raise_From_Signal_Handler):
	Use the new notification routines.

	* prj-tree.ads (First_Choice_Of): Document the when others case

	* bindgen.adb (Gen_Ada_Init_*): Set priority of environment task in
	HI-E mode, in order to support Ravenscar profile properly.

	* cstand.adb (Create_Standard): Duration is a 32 bit type in HI-E
	mode on 32 bits targets.

	* fmap.adb: Initial version.

	* fmap.ads: Initial version.

	* fname-uf.adb (Get_File_Name): Use mapping if unit name mapped.
	If search is successfully done, add to mapping.

	* frontend.adb: Initialize the mapping if a -gnatem switch was used.

	* make.adb:
	(Gnatmake): Add new local variable Mapping_File_Name.
	 Create mapping file when using project file(s).
	 Delete mapping file before exiting.

	* opt.ads (Mapping_File_Name): New variable

	* osint.adb (Find_File): Use path name found in m

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -296,7 +296,7 @@ GNAT_ADA_OBJS = \
  exp_code.o exp_dbug.o exp_disp.o exp_dist.o exp_fixd.o exp_aggr.o exp_imgv.o \
  exp_intr.o exp_pakd.o exp_prag.o exp_smem.o \
  exp_strm.o exp_tss.o exp_util.o exp_vfpt.o expander.o fname.o fname-uf.o \
- freeze.o frontend.o gnat.o g-hesora.o g-htable.o g-os_lib.o \
+ fmap.o freeze.o frontend.o gnat.o g-hesora.o g-htable.o g-os_lib.o \
  g-speche.o s-crc32.o get_targ.o gnatvsn.o \
  hlo.o hostparm.o impunit.o \
  interfac.o itypes.o inline.o krunch.o lib.o \
@@ -326,7 +326,7 @@ GNATBIND_OBJS = \
  alloc.o bcheck.o binde.o \
  binderr.o bindgen.o bindusg.o \
  butil.o casing.o csets.o \
- debug.o fname.o gnat.o g-hesora.o g-htable.o \
+ debug.o fmap.o fname.o gnat.o g-hesora.o g-htable.o \
  g-os_lib.o gnatbind.o gnatvsn.o hostparm.o \
  krunch.o namet.o opt.o osint.o output.o rident.o s-crc32.o s-assert.o \
  s-parame.o s-sopco3.o s-sopco4.o s-sopco5.o s-stache.o s-stalib.o \
@@ -364,7 +364,7 @@ GNATCMD_RTL_OBJS = adaint.o argv.o raise.o exit.o final.o init.o \
    s-stache.o s-sopco3.o s-sopco4.o s-sopco5.o \
    s-strops.o s-soflin.o s-wchcon.o s-wchcnv.o s-wchjis.o s-unstyp.o 
 
-GNATCMD_OBJS = alloc.o debug.o fname.o gnatcmd.o gnatvsn.o hostparm.o \
+GNATCMD_OBJS = alloc.o debug.o fmap.o fname.o gnatcmd.o gnatvsn.o hostparm.o \
    krunch.o namet.o opt.o osint.o casing.o csets.o widechar.o \
    output.o sdefault.o switch.o stylesw.o validsw.o table.o tree_io.o types.o \
    $(GNATCMD_RTL_OBJS) $(EXTRA_GNATTOOLS_OBJS)
@@ -394,7 +394,7 @@ GNATLINK_RTL_OBJS = \
    s-memory.o s-traceb.o s-wchcnv.o s-wchcon.o s-wchjis.o
 
 GNATLINK_OBJS = gnatlink.o link.o \
-   alloc.o debug.o gnatvsn.o hostparm.o namet.o \
+   alloc.o debug.o fmap.o gnatvsn.o hostparm.o namet.o \
    opt.o osint.o output.o sdefault.o stylesw.o validsw.o \
    switch.o table.o tree_io.o types.o widechar.o \
    $(GNATLINK_RTL_OBJS) $(EXTRA_GNATTOOLS_OBJS)
@@ -483,6 +483,7 @@ GNATLS_OBJS = \
  einfo.o    \
  elists.o   \
  errout.o   \
+ fmap.o     \
  fname.o    \
  gnatls.o   \
  gnatvsn.o  \
@@ -553,7 +554,7 @@ GNATMAKE_RTL_OBJS = adaint.o argv.o raise.o exit.o a-comlin.o \
 
 GNATMAKE_OBJS = ali.o ali-util.o \
  alloc.o atree.o binderr.o butil.o casing.o csets.o debug.o einfo.o elists.o \
- errout.o fname.o fname-uf.o fname-sf.o \
+ errout.o fmap.o fname.o fname-uf.o fname-sf.o \
  gnatmake.o gnatvsn.o hostparm.o krunch.o lib.o make.o makeusg.o \
  mlib.o mlib-fil.o mlib-prj.o mlib-tgt.o mlib-utl.o \
  namet.o nlists.o opt.o osint.o output.o \
@@ -706,7 +707,7 @@ GNATXREF_RTL_OBJS =  \
    s-valuti.o s-valuns.o s-valint.o s-wchcon.o s-wchjis.o s-wchcnv.o
 
 GNATXREF_OBJS = gnatxref.o xr_tabls.o xref_lib.o \
-   alloc.o debug.o gnatvsn.o hostparm.o types.o output.o \
+   alloc.o debug.o fmap.o gnatvsn.o hostparm.o types.o output.o \
    sdefault.o stylesw.o validsw.o tree_io.o opt.o table.o osint.o \
    switch.o widechar.o namet.o \
    $(GNATXREF_RTL_OBJS) $(EXTRA_GNATTOOLS_OBJS)
@@ -729,7 +730,7 @@ GNATFIND_RTL_OBJS = \
    s-valuns.o s-valuti.o s-wchcnv.o s-wchcon.o s-wchjis.o
 
 GNATFIND_OBJS = gnatfind.o xr_tabls.o xref_lib.o \
-   alloc.o debug.o gnatvsn.o hostparm.o namet.o opt.o \
+   alloc.o debug.o fmap.o gnatvsn.o hostparm.o namet.o opt.o \
    osint.o output.o sdefault.o stylesw.o validsw.o switch.o table.o \
    tree_io.o types.o widechar.o \
    $(GNATFIND_RTL_OBJS) $(EXTRA_GNATTOOLS_OBJS)
@@ -3129,6 +3130,9 @@ fname.o : ada.ads a-except.ads alloc.ads debug.ads fname.ads fname.adb \
    system.ads s-assert.ads s-exctab.ads s-stalib.ads s-wchcon.ads \
    table.ads table.adb tree_io.ads types.ads unchconv.ads unchdeal.ads 
 
+fmap.o : alloc.ads debug.ads fmap.ads fmap.adb hostparm.ads namet.ads opt.ads \
+   osint.ads output.ads table.ads table.adb tree_io.ads types.ads
+
 fname-sf.o : alloc.ads casing.ads fname.ads fname-sf.ads fname-sf.adb \
    fname-uf.ads gnat.ads g-os_lib.ads namet.ads osint.ads sfn_scan.ads \
    system.ads s-exctab.ads s-stalib.ads s-stoele.ads table.ads types.ads \
@@ -3522,12 +3526,12 @@ opt.o : ada.ads a-except.ads gnat.ads g-os_lib.ads gnatvsn.ads \
    hostparm.ads opt.ads opt.adb system.ads s-exctab.ads s-stalib.ads \
    s-wchcon.ads tree_io.ads types.ads unchconv.ads unchdeal.ads 
 
-osint.o : ada.ads a-except.ads a-uncdea.ads alloc.ads debug.ads gnat.ads \
-   g-htable.ads g-htable.adb g-os_lib.ads hostparm.ads namet.ads opt.ads \
-   osint.ads osint.adb output.ads sdefault.ads system.ads s-assert.ads \
-   s-exctab.ads s-secsta.ads s-soflin.ads s-stache.ads s-stalib.ads \
-   s-stoele.ads s-wchcon.ads table.ads table.adb tree_io.ads types.ads \
-   unchconv.ads unchdeal.ads 
+osint.o : ada.ads a-except.ads a-uncdea.ads alloc.ads debug.ads fmap.ads \
+   gnat.ads g-htable.ads g-htable.adb g-os_lib.ads hostparm.ads namet.ads \
+   opt.ads osint.ads osint.adb output.ads sdefault.ads system.ads \
+   s-assert.ads s-exctab.ads s-secsta.ads s-soflin.ads s-stache.ads \
+   s-stalib.ads s-stoele.ads s-wchcon.ads table.ads table.adb tree_io.ads \
+   types.ads  unchconv.ads unchdeal.ads
 
 output.o : gnat.ads g-os_lib.ads output.ads output.adb system.ads \
    s-exctab.ads s-stalib.ads types.ads unchconv.ads unchdeal.ads 
