* bindgen.adb: Minor reformatting
	* cstand.adb: Minor reformatting

	* fmap.adb: Minor reformatting
	Change name from Add for Add_To_File_Map (Add is much too generic)
	Change Path_Name_Of to Mapped_Path_Name
	Change File_Name_Of to Mapped_File_Name
	Fix copyright dates in header

	* fmap.ads:
	Change name from Add for Add_To_File_Map (Add is much too generic)
	Change Path_Name_Of to Mapped_Path_Name
	Change File_Name_Of to Mapped_File_Name
	Fix copyright dates in header

	* fname-uf.adb: Minor reformatting.  New names of stuff in Fmap.
	Add use clause for Fmap.

	* make.adb: Minor reformatting

	* osint.adb: Minor reformatting.  Change of names in Fmap.
	Add use clause for Fmap.

	* prj-env.adb: Minor reformatting

	* prj-env.ads: Minor reformatting

	* switch.adb: Minor reformatting.  Do proper raise of Bad_Switch if
	error found (there were odd exceptions to this general rule in
	-gnatec/-gnatem processing)

	* raise.c (__gnat_eh_personality): Exception handling personality
	routine for Ada.  Still in rough state, inspired from the C++ version
	and still containing a bunch of debugging artifacts.
	(parse_lsda_header, get_ttype_entry): Local (static) helpers, also
	inspired from the C++ library.

	* raise.c (eh_personality): Add comments. Part of work for the GCC 3
	exception handling integration.

	* Makefile.in: Remove use of 5smastop.adb which is obsolete.
	(HIE_SOURCES): Add s-secsta.ad{s,b}.
	(HIE_OBJS): Add s-fat*.o
	(RAVEN_SOURCES): Remove files that are no longer required. Add
	interrupt handling files.
	(RAVEN_MOD): Removed, no longer needed.

	* a-ngelfu.adb: Remove ??? comment for inappropriate Inline_Always
	Add 2001 to copyright date

	* g-regpat.adb: Change pragma Inline_Always to Inline. There is no
	need to force universal inlining for these cases.

	* s-taprob.adb: Minor clean ups so that this unit can be used in
	Ravenscar HI.

	* exp_ch7.adb: Allow use of secondary stack in HI mode.
	Disallow it when pragma Restrictions (No_Secondary_Stack) is 

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -1060,7 +1060,6 @@ ifeq ($(strip $(filter-out sparc sun solaris2% sunos5%,$(targ))),)
   a-intnam.ads<4sintnam.ads \
   s-inmaop.adb<7sinmaop.adb \
   s-intman.adb<5sintman.adb \
-  s-mastop.adb<5smastop.adb \
   s-osinte.adb<5sosinte.adb \
   s-osinte.ads<5sosinte.ads \
   s-osprim.adb<5posprim.adb \
@@ -1086,7 +1085,6 @@ ifeq ($(strip $(filter-out sparc sun solaris2% sunos5%,$(targ))),)
     a-intnam.ads<4sintnam.ads \
     s-inmaop.adb<7sinmaop.adb \
     s-intman.adb<5sintman.adb \
-    s-mastop.adb<5smastop.adb \
     s-osinte.adb<7sosinte.adb \
     s-osinte.ads<5tosinte.ads \
     s-osprim.adb<5posprim.adb \
@@ -1105,7 +1103,6 @@ ifeq ($(strip $(filter-out sparc sun solaris2% sunos5%,$(targ))),)
     a-intnam.ads<4sintnam.ads \
     s-inmaop.adb<7sinmaop.adb \
     s-intman.adb<7sintman.adb \
-    s-mastop.adb<5smastop.adb \
     s-osinte.adb<5iosinte.adb \
     s-osinte.ads<54osinte.ads \
     s-osprim.adb<5posprim.adb \
@@ -1909,6 +1906,8 @@ HIE_SOURCES = \
  s-fatlfl.ads \
  s-fatllf.ads \
  s-fatsfl.ads \
+ s-secsta.ads \
+ s-secsta.adb \
  a-tags.ads   \
  a-tags.adb $(EXTRA_HIE_SOURCES)
 
@@ -1923,23 +1922,19 @@ HIE_OBJS =  \
  s-stoele.o \
  s-maccod.o \
  s-unstyp.o \
+ s-fatflt.o \
+ s-fatlfl.o \
+ s-fatllf.o \
+ s-secsta.o \
  a-tags.o $(EXTRA_HIE_OBJS)
 
 # Files which are needed in ravenscar mode
 
 RAVEN_SOURCES = \
  $(HIE_SOURCES) \
- s-arit64.ads \
- s-arit64.adb \
  s-parame.ads \
  s-parame.adb \
  g-except.ads \
- s-stalib.ads \
- s-stalib.adb \
- s-soflin.ads \
- s-soflin.adb \
- s-secsta.ads \
- s-secsta.adb \
  s-osinte.ads \
  s-osinte.adb \
  s-tasinf.ads \
@@ -1948,9 +1943,12 @@ RAVEN_SOURCES = \
  s-taprop.ads \
  s-taprop.adb \
  s-taskin.ads \
+ s-taskin.adb \
  s-interr.ads \
  s-interr.adb \
- s-taskin.adb \
+ a-interr.ads \
+ a-interr.adb \
+ a-intnam.ads \
  a-reatim.ads \
  a-reatim.adb \
  a-retide.ads \
@@ -1963,33 +1961,24 @@ RAVEN_SOURCES = \
  s-tarest.ads \
  s-tarest.adb $(EXTRA_RAVEN_SOURCES)
 
-# Files that need to be preprocessed before inclusion in a ravenscar run time
-
-RAVEN_MOD = \
- s-tposen.adb \
- s-tarest.adb
-
 # Objects to generate for the ravenscar run time
 
 RAVEN_OBJS = \
  $(HIE_OBJS) \
- g-except.o  \
- s-stalib.o  \
- s-arit64.o  \
  s-parame.o  \
- s-soflin.o  \
- s-secsta.o  \
- s-tasinf.o  \
+ g-except.o  \
  s-osinte.o  \
+ s-tasinf.o  \
  s-taspri.o  \
  s-taprop.o  \
  s-taskin.o  \
- s-taprob.o  \
- s-tposen.o  \
  s-interr.o  \
  a-interr.o  \
+ a-intnam.o  \
  a-reatim.o  \
  a-retide.o  \
+ s-taprob.o  \
+ s-tposen.o  \
  s-tasres.o  \
  s-tarest.o  $(EXTRA_RAVEN_OBJS)
 
