--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Thu Dec 20 18:02:04 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* unroll.c (unroll_loops): Fix LOOP_CONDITION heuristics.
+
 Mon Dec 17 17:34:39 CET 2001  Jan Hubicka  <jh@sue.cz>
 
 	* toplev.c (rest_of_compilation): Revert:
