--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Thu Dec 20 20:36:33 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* libgcc2.c: Merge from mainline.
+
 Thu Dec 20 18:15:04 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* predict.def: Fix.
