* basic-block.h (maybe_hot_bb_p, probably_cold_bb_p, 	probably_never_executed_bb_p): New functions. 	* cfgcleanup.c (outgoing_edges_match): Use them. 	* predict.c (MIN_COUNT, MIN_FREQUENCY): New macros. 	(maybe_hot_bb_p, probably_cold_bb_p, 	probably_never_executed_bb_p): New functions. 	* tracer.c (ignore_bb_p): Use them.
	* function.h (function): Add new filed function_frequency.
	* predict.c (compute_function_frequency): New function.
	(estimate_probability): Call it.
	* varasm.c (in_section, unlikely_executed_text_section,
	hot_text_section): New static function.
	(function_section): Use them.
	* elfos.h (HOT_TEXT_SECTION_ASM_OP,
	UNLIKELY_EXECUTED_TEXT_SECITON_ASM_OP): New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48217 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,22 @@
+Thu Dec 20 22:14:00 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* basic-block.h (maybe_hot_bb_p, probably_cold_bb_p,
+	probably_never_executed_bb_p): New functions.
+	* cfgcleanup.c (outgoing_edges_match): Use them.
+	* predict.c (MIN_COUNT, MIN_FREQUENCY): New macros.
+	(maybe_hot_bb_p, probably_cold_bb_p,
+	probably_never_executed_bb_p): New functions.
+	* tracer.c (ignore_bb_p): Use them.
+
+	* function.h (function): Add new filed function_frequency.
+	* predict.c (compute_function_frequency): New function.
+	(estimate_probability): Call it.
+	* varasm.c (in_section, unlikely_executed_text_section,
+	hot_text_section): New static function.
+	(function_section): Use them.
+	* elfos.h (HOT_TEXT_SECTION_ASM_OP,
+	UNLIKELY_EXECUTED_TEXT_SECITON_ASM_OP): New.
+
 Thu Dec 20 20:36:33 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* libgcc2.c: Merge from mainline.
