* aclocal.m4 (gcc_AC_PROG_GNAT): Run prospective ada drivers in 	subshells. 	* configure.in: Likewise for perl Pod::Man.
	* configure: Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48230 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -501,7 +501,7 @@ fi
 
 # Is pod2man recent enough to regenerate manpages?
 AC_MSG_CHECKING([for recent Pod::Man])
-if perl -e 'use 1.10 Pod::Man' >/dev/null 2>&1; then
+if (perl -e 'use 1.10 Pod::Man') >/dev/null 2>&1; then
   AC_MSG_RESULT(yes)
   GENERATED_MANPAGES=generated-manpages		AC_SUBST(GENERATED_MANPAGES)
 else
