--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -155,7 +155,7 @@ INSTALL_HEADERS_DIR = @build_install_headers_dir@
 # Header files that are made available under the same name
 # to programs compiled with GCC.
 USER_H = $(srcdir)/ginclude/stdarg.h $(srcdir)/ginclude/stddef.h \
-    $(srcdir)/ginclude/varargs.h $(srcdir)/ginclude/proto.h \
+    $(srcdir)/ginclude/varargs.h \
     $(srcdir)/ginclude/stdbool.h $(srcdir)/ginclude/iso646.h \
     $(EXTRA_HEADERS)
 
